---------------------------------------------------------------------------------------------------
Version: 1.6.9
Date: 10/2/26
  Features:
    - On game start or first time joining a server, you are now shown a GUI explaining the very basics of the mod.
  Gui:
    - Potentially fixed the big vertical scroll bar issue for displays with dense DPIs.
---------------------------------------------------------------------------------------------------
Version: 1.6.8
Date: 9/2/26
  Features:
    - Added world generation modes "Triangular", "Ribbon", "Ribbon Maze", "Spider Web", "Lattice", "Clusters", "Donut", and "Solid".
    - Added maze generation algorithm setting with the options "Kruskal", "Recursive Backtracker", "Wilson", and "Binary Tree".
        For use with world generation modes that generate mazes.
    - Added "Total Hexes" settings for all planets, which control approximately how many hexes (and proprtionally trades) are generated for the respective planet.
  Minor Features:
    - Added hotkey for quickly picking up all dropped items on the ground.  Useful when coin spillage occurs by accident.
  Changes:
    - Spiral world generation mode can now generate with either orientation of a spiral (clockwise or counterclockwise).
    - Properly adapted hexaprism spawning conditions to all world generation modes (even ones injected by other mods).
    - Revised the English description of the "Hex Span" quest condition type to more clearly describe that it measures "straight line" distance as opposed to "path through claims" distance.
    - Removed "Planet Size" settings for all planets.
    - Changed default island shapes on Vulcanus, Fulgora, Gleba, and Aquilo, each adjustable in mod settings.
    - Hex claim costs are now based on "path through claims" distance from spawn rather than "straight line" distance.
    - Trade volumes (total item values in trades) are now based on "path through claims" distance instead of "straight line" distance.